Downgrade Path API usage to java 8